--- a/homeweb.html
+++ b/homeweb.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-lg bg-dark border-bottom border-body " data-bs-theme="dark">
+    <nav class="navbar fixed-top navbar-expand-lg bgdark border-bottom border-body " data-bs-theme="dark">
       <div class="container">
         <a class="navbar-brand fs-4" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
