--- a/homeweb.html
+++ b/homeweb.html
@@ -295,22 +295,22 @@
 
     <div class="box2 mx-5">
       <div class="m-4">
-        <img src="img-1.jpg" width="420px" height="300px" />
+        <img src="img-1.jpg" alt="" width="420px" height="300px"/>
       </div>
       <div class="m-4">
-        <img src="img-2.webp" width="420px" height="300px" />
+        <img src="img-2.webp" alt="" width="420px" height="300px" />
       </div>
       <div class="m-4">
-        <img src="img-3.jpg" width="420px" height="300px" />
+        <img src="img-3.jpg" alt="" width="420px" height="300px" />
       </div>
       <div class="m-4">
-        <img src="img-4.png" width="420px" height="300px" />
+        <img src="img-4.png" alt="" width="420px" height="300px" />
       </div>
       <div class="m-4">
-        <img src="img-5.jpeg" width="420px" height="300px" />
+        <img src="img-5.jpeg" alt="" width="420px" height="300px" />
       </div>
       <div class="m-4">
-        <img src="slide-1.webp" width="420px" height="300px" />
+        <img src="slide-1.webp"  alt="" width="420px" height="300px" />
       </div>
     </div>
   </div>
@@ -436,14 +436,14 @@
             necessitatibus maxime
             unde.</p>
           <div class="pb-3">
-            <i class="fa fa-facebook text-white p-3 fs-3 " aria-hidden="true"></i>
+            <a href=""><i class="fa fa-facebook text-white p-3 fs-3 " aria-hidden="true"></i></a>
             
-            <i class="fa fa-instagram text-white p-3 fs-3" aria-hidden="true"></i>  
-            <i class="fa fa-twitter text-white p-3 fs-3" aria-hidden="true"></i>
+            <a href=""><i class="fa fa-instagram text-white p-3 fs-3" aria-hidden="true"></i></a>  
+            <a href=""><i class="fa fa-twitter text-white p-3 fs-3" aria-hidden="true"></i>
           </div>
 
           <div class="input-group mb-3 pb-3">
-            <input type="text" class="form-control-sm textbg" placeholder="Subscribe" aria-label="Subscribe"
+            <input type="text" class="form-control-sm textbg text-white" placeholder="Subscribe" aria-label="Subscribe"
               aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="button" id="button-addon2">GO</button>
           </div>
